# kitabu

./: README.md
schemas/: messages.fbs
server/: .gitignore  Cargo.toml
server/src/: hotkey.rs  main.rs  messages.rs  notification_service.rs  paddle_ocr_service.rs  websocket.rs
ui/: .gitignore  eslint.config.js  package.json  tsconfig.app.json
ui/src/: App.css  App.tsx
ui/src/components/: AudioPlayer.tsx  Navigation.css  Navigation.tsx  ProtectedRoute.tsx  Timeline.css  Timeline.tsx  TimelineItem.tsx  Toast.css  Toast.tsx  ToastContainer.tsx
ui/src/hooks/: useToast.ts
ui/src/pages/: About.tsx  Home.tsx  Landing.tsx  Settings.css  Settings.tsx
ui/src/services/: anki.ts  screenshot.ts  websocket.ts
ui/src/store/: AppContext.tsx  ToastContext.tsx  context.ts  useApp.ts  useToastContext.ts
ui/src/utils/: screenshot.ts
